Fix alignments of fields of embedded relation forms

--- a/src/app.styl
+++ b/src/app.styl
@@ -123,6 +123,10 @@
       .btn
         font-size 0.8rem
 
+.activities,
+.customers,
+.projects,
+.services
   .card
     .card-main
       width: 100%
@@ -138,10 +142,12 @@
 
           .affix
             display: inline-block
-            vertical-align: text-top
+            font-size: 16px
+            vertical-align: baseline
 
           .form-element
             display: inline-block
+            vertical-align: baseline
 
             label
               background: white
@@ -156,7 +162,7 @@
             input
               border: none
               height: 24px
-              padding-top: 5px
+              padding: 0
 
             select
               border: none
